--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,84 +14,84 @@
 
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/bear"
-                android:src="@drawable/bear"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/bear" />
 
             <ImageView
                 android:id="@+id/cat"
-                android:src="@drawable/cat"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/cat" />
 
             <ImageView
                 android:id="@+id/cow"
-                android:src="@drawable/cow"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/cow" />
 
             <ImageView
                 android:id="@+id/dog"
-                android:src="@drawable/dog"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/dog" />
 
             <ImageView
                 android:id="@+id/elephant"
-                android:src="@drawable/elephant"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/elephant" />
 
             <ImageView
                 android:id="@+id/ferret"
-                android:src="@drawable/ferret"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/ferret" />
 
             <ImageView
                 android:id="@+id/hippopotamus"
-                android:src="@drawable/hippopotamus"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/hippopotamus" />
 
             <ImageView
                 android:id="@+id/horse"
-                android:src="@drawable/horse"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/horse" />
 
             <ImageView
                 android:id="@+id/koala_bear"
-                android:src="@drawable/koala_bear"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/koala_bear" />
 
             <ImageView
                 android:id="@+id/lion"
-                android:src="@drawable/lion"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/lion" />
 
             <ImageView
                 android:id="@+id/reindeer"
-                android:src="@drawable/reindeer"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/reindeer" />
 
             <ImageView
                 android:id="@+id/wolverine"
-                android:src="@drawable/wolverine"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/wolverine" />
 
         </LinearLayout>
 
